# BIPNN-Learning-to-Solve-Binary-Integer-Programming-via-Hypergraph-Neural-Networks

./: .gitignore  README.md  environment.yaml  pyproject.toml
data/: cora_hypergraph.txt  test.txt
example/: desc.ipynb
src/: __init__.py  constraint.py  constraints.py  core.py  loss.py  models.py  train.py  utils.py
src/maxcut/: __init__.py  loss.py  utils.py
