[project]
name = "bipnn-research"
version = "0.0.0"
description = "uv environment for the BIPNN research codebase"
requires-python = ">=3.9,<3.10"
dependencies = [
    "torch==1.13.1",
    "torchvision==0.14.1",
    "torchaudio==0.13.1",
    "torch-geometric==2.3.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "dimod==0.12.18",
    "dwave-neal==0.6.0",
    "tqdm==4.67.1",
    "seaborn==0.13.2",
    "dhg==0.9.4",
    "pyqubo==1.5.0",
    "pyscipopt==5.3.0",
]

[tool.uv]
package = false

[tool.uv.sources]
# Map conda's `pytorch-cuda=11.7` to the official PyTorch CUDA 11.7 wheel index.
# On macOS, uv will fall back to the default PyPI CPU wheels because PyTorch does not
# publish CUDA wheels there.
torch = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
